# rp-bot

./: .dockerignore  .gitignore  Character.py  Dockerfile  LICENSE  README.md  app.py  armors.py  commands.py  docker-compose.yml  pyproject.toml  requirements.txt  roleplay.py  trigger  weapons.py
.github/workflows/: main.yml  tests.yml
app/: commands.py  main.py
app/utils/: database.py
tests/: conftest.py  database_test.py
