[tool.poetry]
name = "brihanior-tales"
version = "0.0.1"
description = "Telegram roleplay game"
authors = ["Dmitrii <dmitrij.djachkov@yandex.ru>"]
packages = [ { include = "app" }]

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "^12.2.0"
python-dotenv = "^0.10.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.poetry.scripts]
game = "app.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
